# CODENATIVE

./: .gitignore  HTM_CODE_NATIVE_ANALYSIS_REPORT.md  HTM_Code_Native_Final_Concept.md  README.md  pyproject.toml
benchmarks/: acceptance.py  microbench.py
configs/: phase_a.yaml
docs/: phase_a_overview.md
htm_code_native/: __init__.py
src/htm_code_native/: __init__.py
src/htm_code_native/cli/: __init__.py  __main__.py
src/htm_code_native/config/: __init__.py  settings.py
src/htm_code_native/data/: __init__.py  featurizer.py  types.py  vocabulary.py
src/htm_code_native/editing/: planner.py
src/htm_code_native/encoders/: __init__.py  code.py
src/htm_code_native/hssm/: __init__.py  core.py
src/htm_code_native/losses/: __init__.py  core.py
src/htm_code_native/memory/: __init__.py
src/htm_code_native/model/: __init__.py  phase_a.py
src/htm_code_native/router/: __init__.py  stub.py
src/htm_code_native/tokenizer/: __init__.py  boundary.py  python_tokenizer.py  structure.py  tree_sitter_backend.py
src/htm_code_native/training/: __init__.py  maintenance.py  (+5 more)
tests/: conftest.py
tests/fixtures/: episodic_copy_module.py  recent_copy_module.py  sample_module.py  unicode_module.py
tests/integration/: test_phase_a_model.py  test_training_harness.py
tests/unit/: test_edit_planner_apply.py  test_exact_episodic_phase_c.py  test_exact_recent_phase_b.py  test_hssm_and_memory.py  test_phase_curriculum.py  test_repo_graph_phase_d.py  test_repo_hygiene.py  test_router_warmup.py  test_tokenizer_pipeline.py  test_training_policy.py  test_training_tasks.py
(+19 files in other folders)
